--- a/index.html
+++ b/index.html
@@ -354,6 +354,21 @@ box-shadow: 0 0 10px #333;
 <button onclick="openEFrame('https://bulgarianhistory.org/konstantin-stoilov/')">Константин Стоилов</button>  
 <button onclick="openEFrame('https://bulgarianhistory.org/stambolov-celokupna-bulgaria/')">Стефан Стамболов</button>  
 <button onclick="openEFrame('https://bulgarianhistory.org/valdemar-datski/')">Валдемар Датски</button>  
+<button onclick="openEFrame('https://bulgarianhistory.org/nacionalnata-prosveta-golemiat-proekt-na-bulgarskoto-vuzrajdane/')">Националната Просвета</button>
+
+<button onclick="openEFrame('https://bulgarianhistory.org/trakiyski-vupros/')">Възникване на тракийския въпрос</button>
+
+<button onclick="openEFrame('https://bulgarianhistory.org/nayden-gerov/')">Найден Геров</button>
+
+<button onclick="openEFrame('https://bulgarianhistory.org/osman-pazvantoglu-vragyt-na-isliama/')">Осман Пазвантоглу</button>
+
+<button onclick="openEFrame('https://bulgarianhistory.org/gavril-krustevich/')">Гаврил Кръстевич</button>
+
+<button onclick="openEFrame('https://bulgarianhistory.org/vasil-aprilov/')">Васил Априлов</button>
+
+<button onclick="openEFrame('https://bulgarianhistory.org/anastasiq-dimitrova/')">Анастасия Димитрова</button>
+
+<button onclick="openEFrame('https://bulgarianhistory.org/iosif-sokolski/')">Йосиф Соколски</button>
 </div>  
 <button onclick="toggleSubmenu('lichnosty')">Портрети на личности</button>  
  <div id="lichnosty" class="submenu">  
