--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ nav button {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s;
-    background-image: url('Възраждане.jpg');
+    background-image: url('Мърквичка.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
