--- a/index.html
+++ b/index.html
@@ -501,7 +501,10 @@ const users = [
 {name: "Манолов, Мартин", role: "Ученик", password: "MM3456"},    
 {name: "Стефанова, Велизара", role: "Ученик", password: "VS4567"},   
 {name: "Топалски, Борис", role: "Ученик", password: "BT5678"},
-{name: "Others", role: "Ученик", password: "OT6789"}    
+{name: "Тодорова, Ирен", role: "Ученик", password: "IT78910"}, 
+{name: "Василева, Илина", role: "Ученик", password: "IV891011"},
+{name: "Костадинов, Кристиян", role: "Ученик", password: "BT6789"},
+{name: "Others", role: "Ученик", password: "OT9101112"}    
 ];    
     
 let selectedRole = "";    
