--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@ const users = [
 {name: "Топалски, Борис", role: "Ученик", password: "BT5678"},
 {name: "Тодорова, Ирен", role: "Ученик", password: "IT78910"}, 
 {name: "Василева, Илина", role: "Ученик", password: "IV891011"},
-{name: "Костадинов, Кристиян", role: "Ученик", password: "BT6789"},
+{name: "Костадинов, Кристиян", role: "Ученик", password: "KK6789"},
 {name: "Others", role: "Ученик", password: "OT9101112"}    
 ];    
     
