--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@ box-shadow: 0 0 10px #333;
 </div>  <button onclick="showIframe('Geschichte.html')">Упражнение Олимпия</button>  
 <button onclick="showIframe('Личности.html')">Упражнение Елегия</button>  
 <button onclick="showIframe('Лауреат2.html')">Упражнение Лауреат</button>  
+<button onclick="showIframe('Вестник.jpg')">Списък на възрожденската преса</button>  
 <button onclick="showLiterature()">Препоръчителна литература</button>  <!-- ===================== ДОБАВЕН НОВ БЛОК ===================== -->  <button onclick="toggleSubmenu('extras')">Допълнително</button>  <div id="extras" class="submenu">    
     <button onclick="showIframe('Понятия4.html')">Понятия</button>   
         <!-- НОВО: два датника за независимостите -->  
