--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@ margin: 10px;
 cursor: pointer;
 transition: background 0.3s;
 }
+    .teacherOnly {
+    display: none;
+    }
 .role-buttons button.active { background-color: red; }
 .role-buttons button:hover { background-color: #555; }
 
@@ -309,10 +312,13 @@ box-shadow: 0 0 10px #333;
          <button onclick="openEFrame('Санстефано.png')">Карта на решениято от Санстефанския прелиминарен договор</button>
 
          <button onclick="openEFrame('Берлинска.jpg')">Карта на решенията от Берлинския мирен конгрес</button>
-    </div>  <button onclick="toggleSubmenu('pomagala')">Помагала</button>  
+    </div>  <button onclick="toggleSubmenu('pomagala')">Тестове по история и цивилизации за VII клас</button>  
 <div id="pomagala" class="submenu">  
-    <button>Помагало I</button>  
-    <button>Помагало II</button>  
+      <button onclick="showIframe('С67.jpg')">Страници 6 и 7</button>  
+      <button onclick="showIframe('С89.jpg')">Страници 8 и 9</button> 
+      <button onclick="showIframe('С1011.jpg')">Страници 10 и 11</button> 
+      <button onclick="showIframe('С1213.jpg')">Страници 12 и 13</button>  
+      <button class="teacherOnly" onclick="loadAnswers7()">Отговори на тестовете</button>
 </div>  
 
 <button onclick="toggleSubmenu('sbornici')">Учебна тетрадка ("Просвета Плюс")</button>  
@@ -575,10 +581,19 @@ function addButton() {
     const msg = document.getElementById("adminMessage");  
   
     if (!name || !link) {  
-        msg.textContent = "Попълни и двете полета!";  
+        msg.textContent = "Попълнете и двете полета!";  
         msg.style.color = "red";  
         return;  
     }  
+    function loadAnswers7() {
+    const frame = document.getElementById("contentFrame");
+
+    frame.innerHTML = `
+        <iframe src="О1.jpg" width="100%" height="600px"></iframe>
+        <iframe src="О2.jpg" width="100%" height="600px"></iframe>
+        <iframe src="О3.jpg" width="100%" height="600px"></iframe>
+    `;
+    }
   
     // Създаваме нов бутон в навигацията (в края)  
     const btn = document.createElement("button");  
@@ -590,5 +605,11 @@ function addButton() {
     msg.textContent = "Бутонът е добавен! (Временно – не е запазен)";  
     msg.style.color = "lightgreen";  
 }  
+    function applyTeacherPermissions() {
+    const isTeacher = localStorage.getItem("role") === "teacher";
+    document.querySelectorAll(".teacherOnly").forEach(btn => {
+        btn.style.display = isTeacher ? "block" : "none";
+    });
+    }
     
 </script>  </body>    </html>  
