--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ box-shadow: 0 0 10px #333;
       <button onclick="showIframe('С89.jpg')">Страници 8 и 9</button> 
       <button onclick="showIframe('С1011.jpg')">Страници 10 и 11</button> 
       <button onclick="showIframe('С1213.jpg')">Страници 12 и 13</button>  
-      <button class="loadAnswers7" onclick="loadAnswers7()">Отговори на тестовете</button>
+      <button class="teacherOnly" onclick="loadAnswers7()">Отговори на тестовете</button>
 </div>  
 
 <button onclick="toggleSubmenu('sbornici')">Учебна тетрадка ("Просвета Плюс")</button>  
