--- a/index.html
+++ b/index.html
@@ -326,7 +326,10 @@ box-shadow: 0 0 10px #333;
     <button onclick="showIframe('УТ12.jpg')">Упражнения върху I и II урок</button>  
     <button onclick="showIframe('УТ34.jpg')">Упражнения върху III и IV урок</button> 
     <button onclick="showIframe('УТ56.jpg')">Упражнения върху V и VI урок</button>  
-    <button onclick="showIframe('УТ78.jpg')">Упражнения върху VII и VIII урок</button>   
+    <button onclick="showIframe('УТ78.jpg')">Упражнения върху VII и VIII урок</button> 
+    <button onclick="showIframe('УТ910.jpg')">Упражнения върху IX и X урок</button>
+    <button onclick="showIframe('УТ1112.jpg')">Упражнения върху XI и XII урок</button>
+    <button onclick="showIframe('ОБ.jpg')">Обобщителен тест</button>
 </div>
 
 </div>  
