--- a/index.html
+++ b/index.html
@@ -477,9 +477,7 @@ function showIframe(page) {
     }  
 }
     
-function openEFrame(url) {
-    document.getElementById("iframe").src = url;
-}  
+function openEFrame(url) { showIframe(url); }    
     
 function showLiterature() {    
 mainContent.style.display = 'none';    
