--- a/olimpyada2.html
+++ b/olimpyada2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Областен кръг от 2011-та година</title>
+<title>Областен кръг от 2011-та година, 6 кл.</title>
 <style>
 img {
     width: 100%;
@@ -17,7 +17,7 @@ body {
 </head>
 <body>
 
-<h2>Областен кръг от 2011-та година</h2>
+<h2>Областен кръг от 2011-та година, 6 кл.</h2>
 
 <img src="Ол1.jpg">
 <img src="Ол2.jpg">
