--- a/index.html
+++ b/index.html
@@ -318,6 +318,9 @@ box-shadow: 0 0 10px #333;
       <button onclick="showIframe('С89.jpg')">Страници 8 и 9</button> 
       <button onclick="showIframe('С1011.jpg')">Страници 10 и 11</button> 
       <button onclick="showIframe('С1213.jpg')">Страници 12 и 13</button>  
+      <button onclick="showIframe('С1415.jpg')">Страници 14 и 15</button>
+      <button onclick="showIframe('С1617.jpg')">Страници 16 и 17</button>
+      <button onclick="showIframe('С1819.jpg')">Страници 18 и 19</button>
       <button class="teacherOnly" onclick="loadAnswers7()">Отговори на тестовете</button>
 </div>  
 
@@ -402,6 +405,15 @@ box-shadow: 0 0 10px #333;
     <button onclick="openEFrame('Стефан.jpg')">Портрет на княз Стефан Богориди</button>
 
     <button onclick="openEFrame('ЕкзархСтефан.jpg')">Портрет на Екзарх Стефан I</button>
+      <button onclick="openEFrame('Мамарчев.jpg')">Портрет на Георги Мамарчев</button>
+    <button onclick="openEFrame('Велчо.jpg')">Портрет на Велчо Атанасов</button>
+    <button onclick="openEFrame('Братята.jpg')">Портрети на Евлоги и Христо Георгиеви</button>
+    <button onclick="openEFrame('Касабов.jpg')">Портрет на Иван Касабов</button>
+    <button onclick="openEFrame('ХД.jpg')">Портрет на Хаджи Димитър</button>
+    <button onclick="openEFrame('СтефанК.jpg')">Портрет на Стефан Караджа</button>
+    <button onclick="openEFrame('Хитов.jpg')">Портрет на Панайот Хитов</button>
+    <button onclick="openEFrame('Тотю.jpg')">Портрет на Филип Тотю</button>
+ </div>
  </div>  </div>    
 <!-- ===================== КРАЙ НА ДОБАВКАТА ===================== -->  <button onclick="showAdvice()">Съвети за олимпиадата</button>  
 <button>Календар</button>  
