--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@ box-shadow: 0 0 10px #333;
     <button onclick="openEFrame('Стефан.jpg')">Портрет на княз Стефан Богориди</button>
 
     <button onclick="openEFrame('ЕкзархСтефан.jpg')">Портрет на Екзарх Стефан I</button>
-      <button onclick="openEFrame('Мамарчев.jpg')">Портрет на Георги Мамарчев</button>
+    <button onclick="openEFrame('Мамарчев.jpg')">Портрет на Георги Мамарчев</button>
     <button onclick="openEFrame('Велчо.jpg')">Портрет на Велчо Атанасов</button>
     <button onclick="openEFrame('Братята.jpg')">Портрети на Евлоги и Христо Георгиеви</button>
     <button onclick="openEFrame('Касабов.jpg')">Портрет на Иван Касабов</button>
@@ -414,7 +414,7 @@ box-shadow: 0 0 10px #333;
     <button onclick="openEFrame('Хитов.jpg')">Портрет на Панайот Хитов</button>
     <button onclick="openEFrame('Тотю.jpg')">Портрет на Филип Тотю</button>
  </div>
- </div>  </div>    
+ </div>    
 <!-- ===================== КРАЙ НА ДОБАВКАТА ===================== -->  <button onclick="showAdvice()">Съвети за олимпиадата</button>  
 <button>Календар</button>  
 <button onclick="showUsers()">Потребители</button>  </nav>  <main id="content">    
